--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
-    "@biomejs/biome": "1.9.4"
+    "@biomejs/biome": "1.9.4",
+    "babel-plugin-module-resolver": "^5.0.2"
   },
   "private": true
 }
