--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "@babel/core": "^7.24.6",
     "@biomejs/biome": "1.9.4",
-    "babel-plugin-module-resolver": "^5.0.2"
+    "@types/react": "^18.3.12",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "typescript": "^5.6.3"
   },
   "private": true
 }
