--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "@components/*": [
         "./src/components/*"
       ],
+      "@store/*": [
+        "./src/store/*"
+      ],
       "@utils/*": [
         "./src/utils/*"
       ],
