--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.25.9",
     "axios": "1.7.4",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo": "51.0.38",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.72.10"
+    "react-native": "0.74.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
     "@biomejs/biome": "1.9.4",
-    "@types/react": "^18.3.12",
+    "@types/react": "~18.2.79",
     "babel-plugin-module-resolver": "^5.0.2",
-    "typescript": "^5.6.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
