--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.25.9",
+    "@react-navigation/native": "^6.1.18",
     "axios": "1.7.4",
     "expo": "51.0.38",
     "expo-status-bar": "~1.12.1",
